// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/searchabledropdownwithaddall should create a dropdown with an add all and remove all buttons 1`] = `
<div
  className="ms-Stack css-109"
>
  <Dropdown
    className="msla-searchable-dropdown-with-buttons"
    multiSelect={true}
    onChange={[Function]}
    onDismiss={[Function]}
    onRenderItem={[Function]}
    options={
      [
        {
          "key": "foo",
          "text": "Foo",
        },
        {
          "key": "bar",
          "text": "Bar",
        },
        {
          "key": "baz",
          "text": "Baz",
        },
      ]
    }
    placeholder="Select an option"
    selectedKeys={[]}
  />
  <button
    aria-label="Add all tooltip"
    className="fui-Button r1alrhcs ___93s59t0_1cia91x f1c21dwh fjxutwb fwiml72 fh7ncta f1khb0e9 f1vdfbxk f1jnq6q7 f1f5gg8d f1aa9q02 f16jpd5f f1jar5jt fyu767a fy9rknc figsok6 fwrc4pm fg3gtdo fwii5mg f1palphq f12nxie7"
    data-automation-id="msla-add-all-button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onPointerEnter={[Function]}
    onPointerLeave={[Function]}
    type="button"
  >
    Add all
  </button>
  <button
    aria-label="Remove all tooltip"
    className="fui-Button r1alrhcs ___93s59t0_1cia91x f1c21dwh fjxutwb fwiml72 fh7ncta f1khb0e9 f1vdfbxk f1jnq6q7 f1f5gg8d f1aa9q02 f16jpd5f f1jar5jt fyu767a fy9rknc figsok6 fwrc4pm fg3gtdo fwii5mg f1palphq f12nxie7"
    data-automation-id="msla-remove-all-button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onPointerEnter={[Function]}
    onPointerLeave={[Function]}
    type="button"
  >
    Remove all
  </button>
</div>
`;

exports[`lib/searchabledropdownwithaddall should create a dropdown with an add all only 1`] = `
<div
  className="ms-Stack css-109"
>
  <Dropdown
    className="msla-searchable-dropdown-with-buttons"
    multiSelect={true}
    onChange={[Function]}
    onDismiss={[Function]}
    onRenderItem={[Function]}
    options={
      [
        {
          "key": "foo",
          "text": "Foo",
        },
        {
          "key": "bar",
          "text": "Bar",
        },
        {
          "key": "baz",
          "text": "Baz",
        },
      ]
    }
    placeholder="Select an option"
    selectedKeys={[]}
  />
  <button
    aria-label="Add all tooltip"
    className="fui-Button r1alrhcs ___93s59t0_1cia91x f1c21dwh fjxutwb fwiml72 fh7ncta f1khb0e9 f1vdfbxk f1jnq6q7 f1f5gg8d f1aa9q02 f16jpd5f f1jar5jt fyu767a fy9rknc figsok6 fwrc4pm fg3gtdo fwii5mg f1palphq f12nxie7"
    data-automation-id="msla-add-all-button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onPointerEnter={[Function]}
    onPointerLeave={[Function]}
    type="button"
  >
    Add all
  </button>
</div>
`;
